fixes unreadable text in dark mode on home page

--- a/public/css/czqomd.css
+++ b/public/css/czqomd.css
@@ -172,6 +172,11 @@ body[data-theme="dark"] .modal-content {
     background:  rgb(59, 61, 68) !important;
 }
 
+body[data-theme="dark"] #discordTopModal .modal-content div {
+    color: black;
+}
+
+
 body[data-theme="dark"] .modal-content .close {
     color: #eee !important;
 }
